[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/icons/back.png" type="Texture" id=3]
[ext_resource path="res://scene/menu/host_setting/host_setting.gd" type="Script" id=4]

[node name="host_setting" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 1017.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 586.0
margin_bottom = 114.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 579.0
margin_bottom = 107.0

[node name="close_button" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
custom_fonts/font = ExtResource( 2 )
icon = ExtResource( 3 )
expand_icon = true

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 488.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Host Server"
align = 1
valign = 1

[node name="margin" type="MarginContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 492.0
margin_right = 572.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 586.0
margin_bottom = 886.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 768.0
rect_min_size = Vector2( 20, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 562.0
margin_bottom = 768.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 538.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 538.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "Bots (1)"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 538.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 538.0
margin_bottom = 162.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 20.0
margin_right = 13.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
text = "1"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 17.0
margin_right = 37.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 41.0
margin_right = 475.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 479.0
margin_right = 499.0
margin_bottom = 80.0
rect_min_size = Vector2( 20, 0 )

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 503.0
margin_top = 20.0
margin_right = 538.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 1 )
text = "10"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 566.0
margin_right = 586.0
margin_bottom = 768.0
rect_min_size = Vector2( 20, 0 )

[node name="create_button" type="Button" parent="VBoxContainer"]
margin_top = 890.0
margin_right = 586.0
margin_bottom = 1010.0
rect_min_size = Vector2( 0, 120 )
custom_fonts/font = ExtResource( 2 )
text = "Create"

[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/close_button" to="." method="_on_close_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/create_button" to="." method="_on_create_button_pressed"]
